# bedrock-server-update

./: .gitignore  Cargo.toml  README.md
src/: downloader.rs  extractor.rs  main.rs  utils.rs
